<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>

    <string name="app_name">极客地带</string>
    <string name="zhihu">知乎日报</string>
    <string name="gank">干货集中营</string>
    <string name="wechat">微信精选</string>
    <string name="news">新闻资讯</string>
    <string name="like">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="info">资讯</string>
    <string name="selection">选项</string>

    <string name="zhihu_news">日报</string>
    <string name="zhihu_themes">主题</string>
    <string name="zhihu_columns">专栏</string>
    <string name="zhihu_hot">热门</string>
    <string name="zhihu_special">特刊</string>
    <string name="zhihu_column_author_pop">%1$d人关注 %2$d篇文章</string>
    <string name="zhihu_post_name_time">%1$s ● %2$s </string>
    <string name="zhihu_post_like_comment_count">%1$d赞 ● %2$d条评论</string>
    <string name="zhihu_follower_number">%1$d人</string>
    <string name="zhihu_post_number">%1$d篇</string>
    <string name="zhihu_posts">发布</string>
    <string name="zhihu_follow">关注</string>
    <string name="zhihu_followed">已关注</string>
    <string name="zhihu_followers">关注者</string>
    <string name="zhihu_column_author_detail">专栏详情</string>

    <string name="article_liked">您已成功收藏此文章</string>
    <string name="article_unliked">您已取消收藏此文章</string>
    <string name="author_followed">您已成功关注此文章</string>
    <string name="author_unfollowed">您已取消关注此文章</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="news_social">社会</string>
    <string name="news_guonei">国内</string>
    <string name="news_world">国际</string>
    <string name="news_huabian">娱乐</string>
    <string name="news_tiyu">体育</string>
    <string name="news_keji">科技</string>
    <string name="news_health">健康</string>
    <string name="news_apple">苹果</string>

    <string name="menu_settings">Settings</string>
    <string name="setting_normal">常规</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其他</string>
    <string name="setting_feedback">反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检测更新</string>
    <string name="setting_email">选择邮件客户端:</string>
    <string name="setting_update_tips">此功能暂未完成(*@ο@*)～</string>

    <string name="about_intro_description"><![CDATA[此项目为我个人用于练手学习的开源项目，其中用到了MVP+Dagger2+Butterknife作为架构支撑，网络请求采用了Retrofit+OkHttp+Gson，网络图片请求用到了Glide，本地数据库用到了Realm，事件分发用到了EventBus，整体UI交互采用了Material Design设计风格]]></string>
    <string name="about_thanks_description"><![CDATA[在写此项目期间，参考学习了不少Github上优秀的开源项目，例如JakeWharton/u2020、GeekNews、LookLook、AndroidFire、Fragmentation、ZhuanLan、ZhihuDailyPurify等，感谢大家的开源分享精神，愿大家一起相互学习共同进步！]]></string>
    <string name="about_libs_description"><![CDATA[Dagger - http://square.github.io/dagger\nButterKnife - http://jakewharton.github.io/butterknife\nRetrofit - http://square.github.io/retrofit\nOkHttp - http://square.github.io/okhttp\nGlide - https://github.com/bumptech/glide\nEventBus - https://github.com/greenrobot/EventBus\nLeakCanary - http://github.com/square/leakcanary]]></string>
    <string name="about_intro">说明</string>
    <string name="about_thanks">致谢</string>
    <string name="about_libs">主要库</string>
    <string name="load_failed">点击屏幕，重新加载</string>

</resources>
